--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --mode development --open --hot",
     "build": "webpack --mode production"
-
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +15,7 @@
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "css-loader": "^3.0.0",
     "file-loader": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
@@ -23,11 +23,18 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-google-charts": "^3.0.13",
+    "react-redux": "^7.1.0",
     "react-scripts": "1.1.1",
     "reactjs-popup": "^1.4.1",
+    "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.34.0",
     "webpack-cli": "^3.3.4",
     "webpack-dev-server": "^3.7.1"
+  },
+  "dependencies": {
+    "babel-polyfill": "^6.26.0"
   }
 }
